<resources>
    <string name="app_name">EnterpriseLearning</string>
    <string name="welcome">欢迎登录在线学习平台</string>
    <string name="job_number">工号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="reset_password">忘记密码</string>
    <string name="error_invalid_password">密码必须为8到16位且包含大小写字母</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请填写帐号</string>
    <string name="error_invalid_number">工号必须为6位数字</string>
    <string name="search">搜索</string>
    <string name="notification">通知</string>
    <string name="main_page">首页</string>
    <string name="courses">课程</string>
    <string name="learning">学习</string>
    <string name="mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courses_recommend">课程推荐</string>
    <string name="note">笔记</string>
    <string name="training">培训</string>
    <string name="plan">计划</string>
    <string name="task">任务</string>
    <string name="change">换一换</string>
    <string name="retrieve_password">找回密码</string>
    <string name="phone_number">请输入手机号</string>
    <string name="set_password">请输入密码</string>
    <string name="set_repassword">再次输入密码</string>
    <string name="verify_number">请输入验证码</string>
    <string name="verify">发送验证码</string>
    <string name="ok">确定</string>
    <string name="rememberpwd">记住密码</string>
    <string name="get_phone_number">获取手机号</string>
    <string name="click_to_watch">点击查看</string>
    <string name="my_notification">我的消息</string>
    <string name="start_learn">开始学习</string>
    <string name="course_image">课程图片</string>
    <string name="username">用户名</string>
    <string name="my_discuss">我的讨论</string>
    <string name="my_history">我的足迹</string>
    <string name="my_data">我的数据</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="my_task">我的任务</string>
    <string name="my_plan">我的计划</string>
    <string name="my_training">我的培训</string>
    <string name="my_note">我的笔记</string>
    <string name="setting">设置</string>
    <string name="offline_training">线下培训</string>
    <string name="sign_up">我要报名</string>
    <string name="training_detail">培训详情</string>
    <string name="training_pic">培训图片</string>
    <string name="training_intro">培训介绍</string>
    <string name="more_detail">更多详情请下载附件：</string>
    <string name="click_to_download">点击下载</string>
    <string name="expand">展开</string>
    <string name="clear_cache">清除缓存</string>
    <string name="receive_notification">接受推送通知</string>
    <string name="notice">请谨慎选择开启 避免过度使用流量</string>
    <string name="wifi">允许非WIFI网络播放</string>
    <string name="feedback">意见反馈</string>
    <string name="version_update">版本更新</string>
    <string name="logout">退出登录</string>
    <string name="user_info">个人信息</string>
    <string name="avatar">头像</string>
    <string name="name">姓名</string>
    <string name="department">部门</string>
    <string name="position">职位</string>
    <string name="gender">性别</string>
    <string name="phone">手机</string>
    <string name="email">邮箱</string>
    <string name="learning_data">学习数据</string>
    <string name="get">获得</string>
    <string name="score">学分</string>
    <string name="learning_time">学习时长(分钟)</string>
    <string name="chapter_complete">完成小节(节)</string>
    <string name="grade">考试成绩(分)</string>
    <string name="overall_score">综合评分</string>
    <string name="course_recommend">相关课程推荐</string>
    <string name="primary">初级</string>
    <string name="courseoutline">课程提纲</string>
    <string name="course_detail">课程详情</string>
    <string name="plan_intro">计划介绍</string>
    <string name="begin_learning">开始学习</string>
    <string name="discuss_from"><![CDATA[源自:<<Web UI设计理论入门>>1-1课程介绍]]></string>
    <string name="arrangement">排序:</string>
    <string name="filter">筛选：</string>
    <string name="details">详情</string>
    <string name="discuss">讨论</string>
    <string name="release">发布</string>
    <string name="your_answer">请输入你的答案</string>
    <string name="reply">回复</string>
    <string name="write_reply">写回复</string>
    <string name="your_reply">请写下你的回复</string>
    <string name="exam">考试</string>
    <string name="exam_details">考试详情</string>
    <string name="end_time">结束时间</string>
    <string name="duration">考试时长</string>
    <string name="total_score">总分</string>
    <string name="pass">及格</string>
    <string name="exam_score">考试得分</string>
    <string name="exam_analysis">试题解析</string>
</resources>
