<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.foxnickel.enterpriselearning.NoteActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/note"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <TextView android:id="@+id/tv_course_count"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="16dp"
              android:layout_marginLeft="16dp"
              android:layout_marginTop="8dp"
              android:text="共8门课程" app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/appBarLayout"/>
    <TextView android:id="@+id/tv_arrangement"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"

              android:layout_marginBottom="8dp"
              android:layout_marginLeft="24dp"
              android:layout_marginStart="24dp"
              android:layout_marginTop="16dp"
              android:text="@string/arrangement"
              app:layout_constraintBottom_toTopOf="@+id/swipe_refresh"
              app:layout_constraintLeft_toRightOf="@+id/tv_course_count"
              app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
              app:layout_constraintVertical_bias="0.0"/>
    <Spinner android:id="@+id/spinner2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
             android:entries="@array/arrangement"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toRightOf="@+id/tv_arrangement"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/appBarLayout"/>
    <TextView android:id="@+id/textView3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="0dp"
              android:layout_marginTop="16dp"
              android:text="@string/filter"
              app:layout_constraintLeft_toRightOf="@+id/spinner2"
              app:layout_constraintTop_toBottomOf="@+id/appBarLayout"/>
    <Spinner android:id="@+id/spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="12dp"
             android:entries="@array/filter"
             app:layout_constraintHorizontal_bias="0.238"
             app:layout_constraintLeft_toRightOf="@+id/textView3"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/appBarLayout"/>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_course_count">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_note"
            android:layout_width="0dp"
            android:layout_height="0dp" tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

        </android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.constraint.ConstraintLayout>
